--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Para que escale a todas las pantallas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>quiendijomiedohptaaas</title>
+    <link rel="shortcut icon" href="imagen/Screenshot_5.png" type="image/x-icon">
+    <title>pruebas</title>
+    
 </head>
 <body>
-<h1>Ya aprendí a colocar imágenes uwu</h1>
-<a href="otra.html"><img src="imagen/COMISION JUJU UWU.jpg" alt="DibujitoDeMiMorchisyYo" width="600" height="300"></a>
+    <header>
+      <strong> <h1>Prueba #2</h1> </strong> 
+      <em> <h3>Holi amorcito <3</h3> </em> 
+    </header>
+<a href="otra.html" target="blank"><img src="imagen/COMISION JUJU UWU.jpg" alt="DibujitoDeMiMorchisyYo" width="600" height="300"></a>
 
+<section>
+    <ol>
+        <li>razones para quererme</li>
+        <li>aprendo a programar pensando en ti</li>
+        <li>kiereme xfa</li>
+    </ol>
+</section>
 </body>
 </html>
